@@ -1,11 +1,9 @@
 package main.commands;
 
+import com.google.common.collect.ImmutableList;
 import main.Practice;
 import main.utils.Constants;
-import org.bukkit.Bukkit;
-import org.bukkit.Location;
-import org.bukkit.Particle;
-import org.bukkit.Sound;
+import org.bukkit.*;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -20,6 +18,18 @@ import java.util.List;
 import static main.utils.Constants.*;
 
 public class RTP implements CommandExecutor, TabExecutor {
+    private void teleportEffect(World world, Location loc) {
+        for (int i = 1; i < 16; i++) {
+            double p1 = (i * Math.PI) / 8;
+            double p2 = (i - 1) * Math.PI / 8;
+            double x1 = Math.cos(p1) * 3;
+            double xx2 = Math.cos(p2) * 3;
+            double z1 = Math.sin(p1) * 3;
+            double z2 = Math.sin(p2) * 3;
+            world.spawnParticle(Particle.TOTEM, loc.clone().add(xx2 - x1, 0, z2 - z1), 1, 1.5f);
+        }
+    }
+
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (!(sender instanceof Player p)) return true;
@@ -33,21 +43,13 @@ public class RTP implements CommandExecutor, TabExecutor {
                     if (playersRTPing.contains(sn))
                         return true;
 
-                    Location locC = endRTP.get(RANDOM.nextInt(100));
-                    p.teleportAsync(locC).thenAccept(result -> {
+                    Location locH = endRTP.get(RANDOM.nextInt(100));
+                    p.teleportAsync(locH).thenAccept(result -> {
                         p.playSound(p, Sound.ENTITY_GENERIC_EXPLODE, 1, 1);
-                        p.sendTitle(SECOND_COLOR + "ᴛᴇʟᴇᴘᴏʀᴛᴇᴅ", "§7" + locC.getX() + " " + locC.getY() + " " + locC.getZ());
+                        p.sendTitle(SECOND_COLOR + "ᴛᴇʟᴇᴘᴏʀᴛᴇᴅ", "§7" + locH.getX() + " " + locH.getY() + " " + locH.getZ());
                         p.addPotionEffect(new PotionEffect(PotionEffectType.BLINDNESS, 60, 1));
                         p.addPotionEffect(new PotionEffect(PotionEffectType.INVISIBILITY, 60, 1));
-                        for (int index = 1; index < 16; index++) {
-                            double p1 = (index * Math.PI) / 8;
-                            double p2 = (index - 1) * Math.PI / 8;
-                            double x1 = Math.cos(p1) * 3;
-                            double xx2 = Math.cos(p2) * 3;
-                            double z1 = Math.sin(p1) * 3;
-                            double z2 = Math.sin(p2) * 3;
-                            Practice.d0.spawnParticle(Particle.TOTEM, locC.clone().add(xx2 - x1, 0, z2 - z1), 1, 1.5f);
-                        }
+                        teleportEffect(Practice.d0, locH);
                     });
                     return true;
                 }
@@ -65,63 +67,37 @@ public class RTP implements CommandExecutor, TabExecutor {
                     p.sendTitle(SECOND_COLOR + "ᴛᴇʟᴇᴘᴏʀᴛᴇᴅ", "§7" + (int) locH.getX() + " " + (int) locH.getY() + " " + (int) locH.getZ());
                     p.addPotionEffect(new PotionEffect(PotionEffectType.BLINDNESS, 60, 1));
                     p.addPotionEffect(new PotionEffect(PotionEffectType.INVISIBILITY, 60, 1));
-                    for (int index = 1; index < 16; index++) {
-                        double p1 = (index * Math.PI) / 8;
-                        double p2 = (index - 1) * Math.PI / 8;
-                        double x1 = Math.cos(p1) * 3;
-                        double xx2 = Math.cos(p2) * 3;
-                        double z1 = Math.sin(p1) * 3;
-                        double z2 = Math.sin(p2) * 3;
-                        Practice.d.spawnParticle(Particle.TOTEM, locH.clone().add(xx2 - x1, 0, z2 - z1), 1, 1.5f);
-                    }
+                    teleportEffect(Practice.d, locH);
                 });
 
-                Player pd = Bukkit.getPlayer(playersRTPing.get(Constants.RANDOM.nextInt(playersRTPing.size())));
+                String name = playersRTPing.get(Constants.RANDOM.nextInt(playersRTPing.size()));
+                Player pd = Bukkit.getPlayer(name);
                 pd.teleportAsync(locH).thenAccept(result -> {
-                    playersRTPing.remove(pd.getName());
+                    playersRTPing.remove(name);
                     p.playSound(p, Sound.ENTITY_GENERIC_EXPLODE, 1, 1);
                     p.sendTitle(SECOND_COLOR + "ᴛᴇʟᴇᴘᴏʀᴛᴇᴅ", "§7" + (int) locH.getX() + " " + (int) locH.getY() + " " + (int) locH.getZ());
                     p.addPotionEffect(new PotionEffect(PotionEffectType.BLINDNESS, 60, 1));
                     p.addPotionEffect(new PotionEffect(PotionEffectType.INVISIBILITY, 60, 1));
-                    for (int index = 1; index < 16; index++) {
-                        double p1 = (index * Math.PI) / 8;
-                        double p2 = (index - 1) * Math.PI / 8;
-
-                        int radius = 3;
-                        double x1 = Math.cos(p1) * radius;
-                        double xx2 = Math.cos(p2) * radius;
-                        double z1 = Math.sin(p1) * radius;
-                        double z2 = Math.sin(p2) * radius;
-                        Practice.d.spawnParticle(Particle.TOTEM, locH.clone().add(xx2 - x1, 0, z2 - z1), 1, 1.5f);
-                    }
                 });
                 return true;
             }
             playersRTPing.add(sn);
         }
 
-        Location locC = overworldRTP.get(RANDOM.nextInt(100));
-        p.teleportAsync(locC).thenAccept(result -> {
+        Location locH = overworldRTP.get(RANDOM.nextInt(100));
+        p.teleportAsync(locH).thenAccept(result -> {
             playersRTPing.remove(sn);
             p.playSound(p, Sound.ENTITY_GENERIC_EXPLODE, 1, 1);
-            p.sendTitle(SECOND_COLOR + "ᴛᴇʟᴇᴘᴏʀᴛᴇᴅ", "§7" + (int) locC.getX() + " " + (int) locC.getY() + " " + (int) locC.getZ());
+            p.sendTitle(SECOND_COLOR + "ᴛᴇʟᴇᴘᴏʀᴛᴇᴅ", "§7" + (int) locH.getX() + " " + (int) locH.getY() + " " + (int) locH.getZ());
             p.addPotionEffect(new PotionEffect(PotionEffectType.BLINDNESS, 60, 1));
             p.addPotionEffect(new PotionEffect(PotionEffectType.INVISIBILITY, 60, 1));
-            for (int index = 1; index < 16; index++) {
-                double p1 = (index * Math.PI) / 8;
-                double p2 = (index - 1) * Math.PI / 8;
-                double x1 = Math.cos(p1) * 3;
-                double xx2 = Math.cos(p2) * 3;
-                double z1 = Math.sin(p1) * 3;
-                double z2 = Math.sin(p2) * 3;
-                Practice.d.spawnParticle(Particle.TOTEM, locC.clone().add(xx2 - x1, 0, z2 - z1), 1, 1.5f);
-            }
+            teleportEffect(Practice.d, locH);
         });
         return true;
     }
 
     @Override
-    public @Nullable java.util.List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
-        return List.of("overworld", "end");
+    public java.util.List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
+        return ImmutableList.of("overworld", "end");
     }
 }
